--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -12,6 +12,7 @@
 
   .left-column, .right-column {
     flex: 0;
+    padding: 0 1vw;
   }
 
   .middle-column {
@@ -20,8 +21,8 @@
     .pane-widgets-s-socialmedia-share-default {
       text-align: center;
       margin-top: 1em;
-      margin-left: calc(-19vw - 24px);
-      margin-right: -21vw;
+      margin-left: calc(-25vw - 15px);
+      margin-right: -16vw;
       width: 100vw;
 
       a img {
