--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -97,21 +97,20 @@
 .pane-page-slogan {
   display: inline-block;
   line-height: 1;
-  font-size: 2.5vw;
+  font-size: 12.5px;
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
   color: #444;
 
+  @include fluid-type(500px, 1200px, 12.5px, 30px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+
   @include breakpoint(768px){
-    font-size: 19px;
     margin-left: -12px;
   }
   @include breakpoint(960px){
-    font-size: 24px;
     margin-left: 18px;
   }
   @include breakpoint(1200px){
-    font-size: 30px;
     margin-left: 29px;
   }
 }
