Adjust slogan font-size

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -504,20 +504,20 @@ legend.collapse-processed a:visited {
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
   color: #444; }
-  @media screen and (min-width: 500px) {
+  @media (min-width: 500px) {
     .pane-page-slogan {
-      font-size: calc(12.5px + 17.5 * ((100vw - 500px) / 700)); } }
-  @media screen and (min-width: 1200px) {
-    .pane-page-slogan {
-      font-size: 30px; } }
+      font-size: 2.5vw; } }
   @media (min-width: 768px) {
     .pane-page-slogan {
+      font-size: 19px;
       margin-left: -12px; } }
   @media (min-width: 960px) {
     .pane-page-slogan {
+      font-size: 24px;
       margin-left: 18px; } }
   @media (min-width: 1200px) {
     .pane-page-slogan {
+      font-size: 30px;
       margin-left: 29px; } }
 
 #header-group-inner {
