--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -101,16 +101,20 @@
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
   color: #444;
-
-  @include fluid-type(500px, 1200px, 12.5px, 30px); // values inside are ($min_width, $max_width, $min_font, $max_font);
-
+  
+  @include breakpoint(500px){
+    font-size: 2.5vw;
+  }
   @include breakpoint(768px){
+    font-size: 19px;
     margin-left: -12px;
   }
   @include breakpoint(960px){
+    font-size: 24px;
     margin-left: 18px;
   }
   @include breakpoint(1200px){
+    font-size: 30px;
     margin-left: 29px;
   }
 }
