--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -12,6 +12,7 @@ h1 {
   font-weight: normal;
   line-height: 120%;
   margin-bottom: 5px;
+  margin-top: 0;
 }
 
 h2 {
@@ -21,6 +22,7 @@ h2 {
   font-weight: 600;
   text-transform: uppercase;
   margin-bottom: 5px;
+  margin-top: 0;
 }
 
 h2 a:hover,
