Reduce spacing below the breadcrumbs

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -161,7 +161,7 @@ html {
   border-radius: 5px;
   border-width: 1px;
   padding: 1em;
-  margin: 1em 0;
+  margin: .5em 0;
 }
 
 .field--name-title-field h1 {
