--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -141,7 +141,7 @@ html {
   border-radius: 5px;
   border-width: 1px;
   padding: 1em;
-  margin: 1em 0; }
+  margin: .5em 0; }
 
 .field--name-title-field h1 {
   text-align: center;
@@ -1076,7 +1076,7 @@ ul.breadcrumb {
         margin: auto; } }
 
 #main-content {
-  padding-top: 1em; }
+  padding-top: 0; }
 
 #console {
   clear: both; }
