Change link color

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -37,7 +37,7 @@ link style */
 a,
 a:link,
 a:visited {
-  color: #0637fb;
+  color: #0370bb;
   text-decoration: none;
   word-wrap: break-word; }
 
