--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -38,7 +38,7 @@ link style */
 a,
 a:link,
 a:visited {
-  color: #0637fb;
+  color: #0370bb;
   text-decoration: none;
   word-wrap: break-word;
 }
