--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -981,10 +981,12 @@ ul.pager {
   border-radius: 6px;
   display: table;
   margin: auto;
-  margin-top: 1em; }
+  margin-top: 1em;
+  padding: 0; }
   ul.pager .pager__item {
     background: #eee;
-    float: left; }
+    float: left;
+    margin-bottom: 0; }
     ul.pager .pager__item:first-child {
       border-radius: 5px 0 0 5px; }
     ul.pager .pager__item:last-child {
