--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1078,7 +1078,7 @@ ul.breadcrumb {
         margin: auto; } }
 
 #main-content {
-  padding-top: 0; }
+  padding-top: 1em; }
 
 #console {
   clear: both; }
