Add spacing below the breadcrumbs

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -150,8 +150,7 @@ html {
 
 .blog-type-page #main-content {
   background-color: transparent;
-  border: 0;
-  padding: 0; }
+  border: 0; }
 .blog-type-page h1.page-title {
   width: 100%;
   text-align: center;
