Change the box border colors

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -136,7 +136,7 @@ html {
 
 .boxed, .page-admin #content {
   background-color: white;
-  border-color: #27638c;
+  border-color: #cccccc;
   border-style: solid;
   border-radius: 5px;
   border-width: 1px;
