--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -133,6 +133,7 @@
         .pane-title {
         	position: static;
           margin-bottom: 1em;
+          text-align: center;
         }
       }
 
