--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -215,7 +215,7 @@ html {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 0px;
             flex: 1 1 0;
-    margin: 0.5em;
+    margin: 0.76%;
     min-width: 0;
     max-width: 100%;
     float: right;
@@ -333,7 +333,7 @@ html {
           -ms-flex: 1 100%;
               flex: 1 100%;
       padding: 0.5em;
-      margin: 0.5em;
+      margin: 0.76%;
       border: 1px solid #cccccc;
       font-size: 14px;
       display: -webkit-inline-box;
