--- a/sass/components/_blog_pages.scss
+++ b/sass/components/_blog_pages.scss
@@ -80,7 +80,7 @@
 
     .sidebar-content {
       flex: 1 1 0;
-      margin: 0.5em;
+      margin: 0.76%;
       min-width: 0;
       max-width: 100%;
       float: right;
@@ -220,7 +220,7 @@
         width: calc((100% / 3) - 42px);
         flex: 1 100%;
         padding: 0.5em;
-        margin: 0.5em;
+        margin: 0.76%;
         border: 1px solid #cccccc;
         font-size: 14px;
         display: inline-flex;
