--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -32,6 +32,36 @@ h2 a:active {
   text-decoration: none;
 }
 
+h1 {
+    font-size: 36px;  // backup size
+    @include fluid-type(718px, 1200px, 28px, 36px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+}
+
+h2 {
+    font-size: 30px;
+    @include fluid-type(718px, 1200px, 22px, 30px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+}
+
+h3 {
+    font-size: 24px;
+    @include fluid-type(718px, 1200px, 16px, 24px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+}
+
+h4 {
+    font-size: 20px;
+    @include fluid-type(718px, 1200px, 14px, 20px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+}
+
+h5 {
+    font-size: 18px;
+    @include fluid-type(718px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+}
+
+h6 {
+    font-size: 16px;
+    @include fluid-type(718px, 1200px, 12px, 16px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+}
+
 /* Default link styles - separate a:visited for a different visited
 link style */
 
