--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -35,11 +35,13 @@
 
 #page-title {
 	text-align: center;
+	font-weight: 600;
 
 	h1.page-title {
 		border: 0;
 		margin-top: 0;
 		margin-bottom: 0.5em;
+		font-weight: inherit;
 	}
 }
 
