--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -86,6 +86,15 @@ h6 {
     h6 {
       font-size: 10px; } }
 
+p {
+  font-size: 13px; }
+  @media screen and (min-width: 718px) {
+    p {
+      font-size: calc(13px + 5 * ((100vw - 718px) / 482)); } }
+  @media screen and (min-width: 1200px) {
+    p {
+      font-size: 18px; } }
+
 /* Default link styles - separate a:visited for a different visited
 link style */
 a,
