--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1392,6 +1392,11 @@ legend.collapse-processed a:visited {
       #wwm-collapse-3 .middle-column .pane-widgets-s-socialmedia-share-default a img {
         min-width: 25px;
         width: 4.4vw; }
+    @media (min-width: 721px) {
+      #wwm-collapse-3 .middle-column {
+        -webkit-box-flex: 1;
+            -ms-flex: 1;
+                flex: 1; } }
   #wwm-collapse-3 .right-column .pane-widgets-s-socialmedia-share-default {
     width: 70px; }
 
@@ -1405,7 +1410,7 @@ legend.collapse-processed a:visited {
   height: 81px; }
   @media (min-width: 450px) {
     .pane-page-logo img {
-      font-size: 18vw; } }
+      height: 18vw; } }
   @media (min-width: 768px) {
     .pane-page-logo img {
       height: 119px; } }
