--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -1463,19 +1463,21 @@ legend.collapse-processed a:visited {
 /* Typography for site slogan */
 .pane-page-slogan {
   display: inline-block;
-  line-height: 1;
+  line-height: 1.3;
   font-size: 12.5px;
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
   color: #444;
   width: calc(100% + 95.45px);
   margin-left: -95.45px;
-  text-align: center; }
+  text-align: center;
+  margin-top: 0.5em; }
   @media (min-width: 400px) {
     .pane-page-slogan {
       width: 100%;
       margin-left: 0;
-      text-align: left; } }
+      text-align: left;
+      margin-top: 0; } }
   @media (min-width: 500px) {
     .pane-page-slogan {
       font-size: 2.5vw; } }
