--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -118,7 +118,7 @@
 
 .pane-page-slogan {
   display: inline-block;
-  line-height: 1;
+  line-height: 1.3;
   font-size: 12.5px;
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-weight: bold;
@@ -126,11 +126,13 @@
   width: calc(100% + 95.45px);
   margin-left: -95.45px;
   text-align: center;
+  margin-top: 0.5em;
 
   @include breakpoint(400px){
     width: 100%;
     margin-left: 0;
     text-align: left;
+    margin-top: 0;
   }
   
   @include breakpoint(500px){
